--- a/portfolio webpage/style.css
+++ b/portfolio webpage/style.css
@@ -71,10 +71,10 @@ body {
 }
 #folders {
     position: absolute;
-    top: 10%;
+    top: 5%;
     left: 90;
     width: 900;
-    height: 90%;
+    height: 95%;
     overflow: hidden;
 }
 .files {
@@ -289,6 +289,7 @@ body {
     top: 33;
     background: none;
     animation: none;
+    box-shadow: 0 0 2px black;
 }
 #newFrame {
     position: absolute;
