--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@
     height: 100vh;
     background-image: url('wood.jpg');
     background-size: contain;
+    overflow: hidden;
 
 }
 header {
@@ -54,6 +55,39 @@ header {
 .navbar-brand {
     margin-left: 150px;
     margin-right: 225px;
+}
+.linkDiv {
+    position:absolute;
+    top:42.5%;
+    left:2%;
+    width: 325px;
+    height: 200px;
+    z-index: 1;
+}
+#rightDiv {
+    left: 77.5%;
+}
+#behindLeft {
+    position:absolute;
+    top:45%;
+    left:2%;
+    width: 320px;
+    height: 100px;
+    background-image: url('fire.gif');
+    border-radius: 2px;
+    box-shadow: inset 0 0 4px black,1px 0 4px black ;
+    overflow: hidden;
+}
+#behindRight {
+    position:absolute;
+    top:45%;
+    left: 77.5%;
+    width: 320px;
+    height: 100px;
+    background-image: url('eerie.gif');
+    border-radius: 3px;
+    box-shadow: inset 0px 30px 60px -12px rgb(76, 76, 77, .35) , inset  0px 18px 36px -18px rgba(0, 0, 0);
+    overflow: hidden;
 }
 .dropdown:hover > .dropdown-menu {
     display: block;
@@ -105,6 +139,11 @@ article {
                  1px 1px 4px black, -1px -1px 4px black, -1px 1px 4px black, 1px -1px 4px black;
 
 }
+#aboutme {
+    transition: .5s .2s;
+    transform-origin: 100% 0%;
+    background-color: rgb(73, 73, 73);
+}
 #aboutMeLink {
     text-decoration: none;
 }
@@ -131,7 +170,10 @@ iframe {
     line-height: 137px;
     top: 55%;
     left: 8%;
+    transition: .5s .2s;
     border-radius: 3px;
+    transform-origin: 0% 0%;
+    background-color: rgb(73, 73, 73);
 }
 #portfolioImg {
     font-family: 'woodburn';
