--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@
 .body-grid {
     display: grid;
     grid-template-columns: repeat(4,1fr);
-    grid-template-rows: 30px repeat(9,1fr);
+    grid-template-rows: 30px repeat(10,1fr);
     gap: 10px;
     height: 100vh;
     background-image: url('wood.jpg');
@@ -43,18 +43,26 @@ header {
 }
 #navBarDiv {
     position: relative;
-    top: 55%; 
-    font-size: 15px;
-    font-family: 'typewriter';
-    text-shadow: none;
+    top: 85%; 
+    font-size: 30px;
+    font-family: 'woodburn';
+    text-shadow: 1px 1px 1px black, -1px -1px 1px black, -1px 1px 1px black, 1px -1px 1px black,
+                 1px 1px 2px rgb(71, 41, 1), -1px -1px 2px rgb(71, 41, 1), -1px 1px 2px rgb(71, 41, 1), 1px -1px 2px rgb(71, 41, 1),
+                 1px 1px 3px rgb(104, 103, 103), -1px -1px 3px rgb(104, 103, 103), -1px 1px 3px rgb(104, 103, 103), 1px -1px 3px rgb(104, 103, 103),
+                 1px 1px 4px black, -1px -1px 4px black, -1px 1px 4px black, 1px -1px 4px black;
     background: transparent;
+    text-decoration: none;
+    z-index: 2;
 }
 .nav-item {
-    margin-left: 245px;
+    margin-left: 180px;
 }
-.navbar-brand {
-    margin-left: 150px;
-    margin-right: 225px;
+#dropdownPro,
+#dropdownGit {
+    text-shadow: none;
+    font-size: 25px;
+    background:rgb(0,0,0,.8);
+    text-shadow: 1px 1px 1px white, -1px 1px 1px white, 1px -1px 1px white, -1px -1px 1px white;
 }
 .linkDiv {
     position:absolute;
@@ -72,7 +80,7 @@ header {
     top:45%;
     left:2%;
     width: 320px;
-    height: 100px;
+    height: 130px;
     background-image: url('fire.gif');
     border-radius: 2px;
     box-shadow: inset 0 0 4px black,1px 0 4px black ;
@@ -83,10 +91,10 @@ header {
     top:45%;
     left: 77.5%;
     width: 320px;
-    height: 100px;
+    height: 130px;
     background-image: url('eerie.gif');
     border-radius: 3px;
-    box-shadow: inset 0px 30px 60px -12px rgb(76, 76, 77, .35) , inset  0px 18px 36px -18px rgba(0, 0, 0);
+    box-shadow: inset 0px 30px 60px -12px rgb(76, 76, 77, .35) , inset  0px 18px 36px -18px rgba(0, 0, 0), 0 0 3px black;
     overflow: hidden;
 }
 .dropdown:hover > .dropdown-menu {
@@ -124,7 +132,7 @@ article {
 .aboutme {
     position: relative;
     text-align: center;
-    top: 55%;
+    top: 65%;
     left: 8%;
     font-family: 'woodburn';
     text-decoration: none;
@@ -150,7 +158,7 @@ article {
 footer {
     padding-top: 50px;
     grid-column: 1 / 5;
-    grid-row: 10 / 11;
+    grid-row: 11 / 12;
     text-align: right;
     background-image: url('falling.gif');
     background-size: cover;
@@ -160,7 +168,7 @@ footer {
 }
 iframe {
     position:relative;
-    top: 26.1%;
+    top: 36.1%;
     left: 10.1%;
 
 }
@@ -168,7 +176,7 @@ iframe {
     position:relative;
     box-shadow: 0 0 6px black, 0 0 8px rgb(104, 103, 103), -2px -2px 4px black;
     line-height: 137px;
-    top: 55%;
+    top: 65%;
     left: 8%;
     transition: .5s .2s;
     border-radius: 3px;
