--- a/default page/style.css
+++ b/default page/style.css
@@ -34,6 +34,12 @@ p {
     margin-left: 10%;
     margin-right: 10%; 
 }
+.websiteTitle {
+    text-align: center;
+    font-family: '1942';
+    margin-left: 10%;
+    margin-right: 10%; 
+}
 #navBarDiv {
     text-shadow: .5px .5px 1px black;
     font-family: 'Bohemian';
