--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ header {
     grid-row: 1 / 3;
     background-image: url('falling.gif');
     background-size: cover;
-    font: 50px bold black;
+    font: 3em bold;
     text-shadow: 2px 2px 1px rgb(56, 56, 56);
     font-family: '1942';
     padding-top: 20px;
@@ -140,6 +140,9 @@ article {
     grid-column: 2 / 4;
     grid-row: 3 / 8;
 }
+#shadow {
+    box-shadow: 0 0 10px black;
+}
 .aside-right {
     grid-column: 4 / 5;
     grid-row: 3 / 8;
@@ -213,7 +216,7 @@ iframe {
 #title {
     position: absolute;
     left:33%;
-    width:50%;
+    width: 400px;
     animation: animated-text 4s steps(16,end) 1s 1 normal both,
                animated-cursor 600ms steps(16,end) infinite;
     overflow: hidden;
